--- a/like_gun/notes.tex
+++ b/like_gun/notes.tex
@@ -655,7 +655,7 @@ Thus for the knots in Fig.~\ref{fig:basis}, the constraints are
 \section{Other Information}
 \label{sec:appendix}
 
-See other information in \~/doc/HE.tex on moonlight.
+See other information in $\sim$/doc/HE.tex on moonlight.
 
 %
 \vfill \hrule
